<resources>
    <string name="app_name">Snake</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="ltGreen">Light Green</string>
    <string name="dkGreen">Dark Green</string>
    <string name="ltBlue">Light Blue</string>
    <string name="dkBlue">Dark Blue</string>
    <string name="purple">Purple</string>
    <string name="black">Black</string>
    <string name="whatColor">Snake color?</string>
    <string name="whatFood">Snake food?</string>
    <string name="junk">Junk food</string>
    <string name="health">Healthy food</string>
    <string name="realistic">Realistic food</string>
    <string name="current">Current Selection:</string>
    <string name="blank">" "</string>
    <string name="selector">Select snake speed:</string>
    <string name="zero">0</string>
    <string name="normal">Normal</string>
    <string name="debug">DEBUG: Game Over</string>
</resources>
